Edit .gitignore and lab-10

--- a/lab-10/gorbanev/Makefile
+++ b/lab-10/gorbanev/Makefile
@@ -1,2 +1,2 @@
 build:
-	g++ main.cpp -o GreenTriangle -std=c++11 -lsfml-graphics -lsfml-window -lsfml-system -lGL -lGLEW
+	g++ main.cpp -o main -std=c++11 -lsfml-graphics -lsfml-window -lsfml-system -lGL -lGLEW
